# Lisp-Interpreter

./: .gitignore  CMakeLists.txt  Makefile  README.txt  sprint1_submission.txt
src/: main.cpp  parser.cpp  parser.h  reader.h  scanner.cpp  scanner.h
src/core/: conditional.cpp  conditional.h  environment.cpp  environment.h  eval.cpp  eval.h  logical_function.cpp  logical_function.h  number_function.cpp  number_function.h  type_checker.cpp  type_checker.h
src/input/: parser.cpp  parser.h  reader.cpp  reader.h  scanner.cpp  scanner.h
src/types/: atom.cpp  atom.h  cons.cpp  cons.h  s_expression.cpp  s_expression.h  token.cpp  token.h
src/util/: logger.h
src/util/logger/: logger.cpp
tests/: main.cpp  test_cases.txt
tests/core/: conditional_test.cpp  conditional_test.h  environment_test.cpp  environment_test.h  eval_test.h  logical_function_test.cpp  logical_function_test.h  number_function_test.cpp  number_function_test.h  type_checker_test.cpp  type_checker_test.h
tests/core/type_checker/: type_checker_test.cpp  type_checker_test.h
tests/input/: reader_test.cpp  reader_test.h  reader_test_cases.txt  scanner_test.cpp  scanner_test.h  scanner_test_cases.txt
tests/reader/: reader_test.cpp  reader_test.h
tests/scanner/: scanner_test.cpp  scanner_test.h
tests/types/: atom_test.cpp  atom_test.h  cons_test.cpp  cons_test.h  sexp_test.cpp  sexp_test.h
